:bug: remove overflow

--- a/css/markdown.css
+++ b/css/markdown.css
@@ -21,8 +21,6 @@ body {
 .content {
     margin-left: 33%; 
     width: 100%;
-    overflow-y: auto; /* Ensures scrolling for the main content */
-    height: 100vh; /* Ensures full height for scrolling */
     padding-left: 14px;
 }
 
